@@ -15,6 +15,9 @@ Unreleased
 
 - Made FakeEmailDelivery quiet by default.
 
+- Better fault tolerance when killing processes using Python < 2.6 via
+  utilities.baseconverter._ProcTimeout
+
 3.5.1 (2009-07-17)
 ------------------
 
